Changes in version 1.6
======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.

* Converted test programs to shtk's unittest library, thus removing the
  dependency on atf-sh and bumping the dependency on shtk to 1.6.

* Fixed option parsing to detect missing arguments to options.


Changes in version 1.5
======================

Released on 2013-07-28.

* Sources migrated to a GitHub project from the previous copy in
  the pkgsrc repository.  sysupgrade is now a first-class package and
  includes a traditional build system based on automake and autoconf.

* Moved the sysupgrade script from bin to sbin.


Changes in version 1.4
======================

Released on 2012-10-10.

* Added support to fetch release sets via ssh.


Changes in version 1.3
======================

Released on 2012-09-07.

* ftp(1) in NetBSD 1.5.2 does not support using -R on files that do not
  exist yet.  Avoid using this option unless necessary.

* httpd(8) in NetBSD 1.5.2 does not support the -P option.  Skip the
  http test unless this option is present, as otherwise we cannot easily
  kill the spawned httpd instance on a test failure.


Changes in version 1.2
======================

Released on 2012-08-24.

* Switched to use netbsd-*.gz files to install the kernel rather than
  kern-*.tgz sets.  This lets sysupgrade work in conjunction with the
  "releasekernel" target of build.sh, as this generates the former
  instead of the latter.

* Fixed a bug to preserve timestamps of the kernel when backing it up as
  onetbsd.

* Fixed some tests to not rely on the current state of the system (the
  cache directory and the autodetection of KERNEL).


Changes in version 1.1
======================

Released on 2012-08-15.

* Switched to use shtk for the common utilities and configuration file
  parsing functionality.  The local copies of the "config" and "utils"
  modules are gone.


Changes in version 1.0
======================

Released on 2012-08-06.
